--- a/Interactive rating component/index.html
+++ b/Interactive rating component/index.html
@@ -1,49 +1,89 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0"> <!-- displays site properly based on user's device -->
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <!-- displays site properly based on user's device -->
 
-  <link rel="icon" type="image/png" sizes="32x32" href="./images/favicon-32x32.png">
-  
-  <title>Frontend Mentor | Interactive rating component</title>
+    <link
+      rel="icon"
+      type="image/png"
+      sizes="32x32"
+      href="./images/favicon-32x32.png"
+    />
 
-  <!-- Feel free to remove these styles or customise in your own stylesheet 👍 -->
-  <style>
-    .attribution { font-size: 11px; text-align: center; }
-    .attribution a { color: hsl(228, 45%, 44%); }
-  </style>
-</head>
-<body>
+    <link rel="stylesheet" href="styles/style.css" />
 
-  <!-- Rating state start -->
+    <title>Frontend Mentor | Interactive rating component</title>
 
-  How did we do?
+    <!-- Feel free to remove these styles or customise in your own stylesheet 👍 -->
+    <style>
+      .attribution {
+        font-size: 11px;
+        text-align: center;
+      }
+      .attribution a {
+        color: hsl(228, 45%, 44%);
+      }
+    </style>
+  </head>
+  <body>
+    <!-- Rating state start -->
+    <section class="container">
+      <section class="card">
+        <div class="card__icon">
+          <img src="images/icon-star.svg" alt="" />
+        </div>
+        <div class="card__text">
+          <h2>How did we do?</h2>
+          <p>
+            Please let us know how we did with your support request. All
+            feedback is appreciated to help us improve our offering!
+          </p>
+        </div>
+        <div class="card__ratings">
+          <div class="card__ratings--rating">1</div>
+          <div class="card__ratings--rating">2</div>
+          <div class="card__ratings--rating">3</div>
+          <div class="card__ratings--rating">4</div>
+          <div class="card__ratings--rating">5</div>
+        </div>
+        <button type="submit">SUBMIT</button>
+      </section>
+    </section>
+    <!-- Rating state end -->
 
-  Please let us know how we did with your support request. All feedback is appreciated 
-  to help us improve our offering!
+    <!-- Thank you state start -->
+    <section class="container display-none">
+      <section class="card">
+        <div class="card__img-content">
+          <img src="images/illustration-thank-you.svg" alt="" />
+        </div>
+        <!-- Add rating here -->
+        <div class="card__rating">
+          <p>You selected <span>x</span> out of 5</p>
+        </div>
+        <div class="card__text card__text--center">
+          <h2>Thank you!</h2>
+          <p>
+            We appreciate you taking the time to give a rating. If you ever need
+            more support, don’t hesitate to get in touch!
+          </p>
+        </div>
+      </section>
+    </section>
+    <!-- Thank you state end -->
 
-  1 2 3 4 5
-
-  Submit
-
-  <!-- Rating state end -->
-
-  <!-- Thank you state start -->
-
-  You selected <!-- Add rating here --> out of 5
-
-  Thank you!
-
-  We appreciate you taking the time to give a rating. If you ever need more support, 
-  don’t hesitate to get in touch!
-
-  <!-- Thank you state end -->
-
-  
-  <div class="attribution">
-    Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
-    Coded by <a href="#">Your Name Here</a>.
-  </div>
-</body>
+    <div class="attribution">
+      Challenge by
+      <a href="https://www.frontendmentor.io?ref=challenge" target="_blank"
+        >Frontend Mentor</a
+      >. Coded by
+      <a
+        href="https://github.com/Joel252/Frontend-Mentor-Solutions/tree/master/Interactive%20rating%20component"
+        >Joel Cruz</a
+      >.
+    </div>
+    <script src="js/main.js"></script>
+  </body>
 </html>
