--- a/Interactive rating component/index.html
+++ b/Interactive rating component/index.html
@@ -29,10 +29,10 @@
   </head>
   <body>
     <!-- Rating state start -->
-    <section class="container">
+    <section id="container-form" class="container">
       <section class="card">
         <div class="card__icon">
-          <img src="images/icon-star.svg" alt="" />
+          <img src="images/icon-star.svg" alt="icon rating" />
         </div>
         <div class="card__text">
           <h2>How did we do?</h2>
@@ -54,14 +54,14 @@
     <!-- Rating state end -->
 
     <!-- Thank you state start -->
-    <section class="container display-none">
+    <section id="container-msj" class="container">
       <section class="card">
         <div class="card__img-content">
-          <img src="images/illustration-thank-you.svg" alt="" />
+          <img src="images/illustration-thank-you.svg" alt="image decoration" />
         </div>
         <!-- Add rating here -->
         <div class="card__rating">
-          <p>You selected <span>x</span> out of 5</p>
+          <p>You selected <span>-</span> out of 5</p>
         </div>
         <div class="card__text card__text--center">
           <h2>Thank you!</h2>
