--- a/Intro section with dropdown navigation/index.html
+++ b/Intro section with dropdown navigation/index.html
@@ -31,69 +31,178 @@
       <a class="logo" href="#" aria-label="snap home page">
         <img src="images/logo.svg" alt="snap logo" />
       </a>
-      <a class="menu" href="#" aria-label="icon to expand the menu">
+      <!--Nav desktop start-->
+      <nav class="nav">
+        <section class="option" aria-label="menu">
+          <a href="#" aria-label="features content">
+            Features
+            <img
+              src="images/icon-arrow-down.svg"
+              alt="collapse content"
+              class="extend"
+            />
+            <img
+              src="images/icon-arrow-up.svg"
+              alt="extend content"
+              class="hidden"
+            />
+          </a>
+          <ul id="nav-features" class="hidden">
+            <li>
+              <a href="#" aria-label="todo list tab"
+                ><img src="images/icon-todo.svg" alt="todo icon" />
+                Todo List
+              </a>
+            </li>
+            <li>
+              <a href="#" aria-label="calendar tab">
+                <img src="images/icon-calendar.svg" alt="calendar icon" />
+                Calendar
+              </a>
+            </li>
+            <li>
+              <a href="#" aria-label="reminders tab">
+                <img src="images/icon-reminders.svg" alt="reminders icon" />
+                Reminders
+              </a>
+            </li>
+            <li>
+              <a href="#" aria-label="planning tab">
+                <img src="images/icon-planning.svg" alt="planning icon" />
+                Planning
+              </a>
+            </li>
+          </ul>
+          <a href="#" aria-label="company content">
+            Company
+            <img src="images/icon-arrow-down.svg" alt="collapse content" />
+            <img
+              src="images/icon-arrow-up.svg"
+              alt="extend content"
+              class="hidden"
+            />
+          </a>
+          <ul id="nav-companies" class="hidden">
+            <li><a href="#" aria-label="history tab">History</a></li>
+            <li><a href="#" aria-label="our team tab">Our team</a></li>
+            <li><a href="#" aria-label="blog tab">Blog</a></li>
+          </ul>
+          <a href="#" aria-label="careers tab"> Careers </a>
+          <a href="#" aria-label="about tab">About</a>
+        </section>
+        <section class="nav-buttons" aria-label="buttons for login on website">
+          <a
+            href="#"
+            class="login"
+            aria-label="link to login form"
+            role="button"
+            >Login</a
+          >
+          <a
+            href="#"
+            class="register"
+            aria-label="link to register form"
+            role="button"
+            >Register</a
+          >
+        </section>
+      </nav>
+      <!--Nav mobile end-->
+
+      <a id="open-menu" href="#" aria-label="icon to expand the menu">
         <img src="images/icon-menu.svg" alt="open menu" />
       </a>
-      <div class="overlay" style="display: none">
+
+      <!--Nav mobile start-->
+      <div class="overlay hidden">
         <nav class="navmovile">
-          <img src="#images/icon-close-menu.svg" alt="close menu" />
-          <ul>
+          <a id="close-menu" href="#" aria-label="icon to expand the menu">
+            <img src="images/icon-close-menu.svg" alt="close menu" />
+          </a>
+          <a href="#" aria-label="features content">
+            Features
+            <img src="images/icon-arrow-down.svg" alt="collapse content" />
+            <img
+              src="images/icon-arrow-up.svg"
+              alt="extend content"
+              class="hidden"
+            />
+          </a>
+          <ul id="navmobile-features" class="hidden">
             <li>
-              <a href="#" aria-label="features content">
-                Features
-                <img src="images/icon-arrow-down.svg" alt="collapse content" />
+              <a href="#" aria-label="todo list tab"
+                ><img src="images/icon-todo.svg" alt="todo icon" />
+                Todo List
               </a>
-              <ul>
-                <li>
-                  <a href="#" aria-label="todo list tab"
-                    ><img src="images/icon-todo.svg" alt="todo icon" />
-                    Todo List
-                  </a>
-                </li>
-                <li>
-                  <a href="#" aria-label="calendar tab">
-                    <img src="images/icon-calendar.svg" alt="calendar icon" />
-                    Calendar
-                  </a>
-                </li>
-                <li>
-                  <a href="#" aria-label="reminders tab">
-                    <img src="images/icon-reminders.svg" alt="reminders icon" />
-                    Reminders
-                  </a>
-                </li>
-                <li>
-                  <a href="#" aria-label="planning tab">
-                    <img src="images/icon-planning.svg" alt="planning icon" />
-                    Planning
-                  </a>
-                </li>
-              </ul>
             </li>
             <li>
-              <a href="#" aria-label="company content">
-                Company
-                <img src="images/icon-arrow-down.svg" alt="collapse content" />
+              <a href="#" aria-label="calendar tab">
+                <img src="images/icon-calendar.svg" alt="calendar icon" />
+                Calendar
               </a>
-              <ul>
-                <li><a href="#" aria-label="history tab">History</a></li>
-                <li><a href="#" aria-label="our team tab">Our team</a></li>
-                <li><a href="#" aria-label="blog tab">Blog</a></li>
-              </ul>
             </li>
-            <li><a href="#" aria-label="careers tab"> Careers </a></li>
-            <li><a href="#" aria-label="about tab">About</a></li>
+            <li>
+              <a href="#" aria-label="reminders tab">
+                <img src="images/icon-reminders.svg" alt="reminders icon" />
+                Reminders
+              </a>
+            </li>
+            <li>
+              <a href="#" aria-label="planning tab">
+                <img src="images/icon-planning.svg" alt="planning icon" />
+                Planning
+              </a>
+            </li>
           </ul>
-          <section class="buttons">
-            <button class="login">Login</button>
-            <button class="register">Register</button>
+          <a href="#" aria-label="company content">
+            Company
+            <img src="images/icon-arrow-down.svg" alt="collapse content" />
+            <img
+              src="images/icon-arrow-up.svg"
+              alt="extend content"
+              class="hidden"
+            />
+          </a>
+          <ul id="navmobile-companies" class="hidden">
+            <li><a href="#" aria-label="history tab">History</a></li>
+            <li><a href="#" aria-label="our team tab">Our team</a></li>
+            <li><a href="#" aria-label="blog tab">Blog</a></li>
+          </ul>
+          <a href="#" aria-label="careers tab"> Careers </a>
+          <a href="#" aria-label="about tab">About</a>
+
+          <section class="buttons" aria-label="buttons for login on website">
+            <a
+              href="#"
+              class="login"
+              aria-label="link to login form"
+              role="button"
+              >Login</a
+            >
+            <a
+              href="#"
+              class="register"
+              aria-label="link to register form"
+              role="button"
+              >Register</a
+            >
           </section>
         </nav>
       </div>
+      <!--Nav mobile end-->
     </header>
 
     <section class="banner" role="banner">
-      <img src="images/image-hero-mobile.png" alt="snap homepage banner" />
+      <img
+        src="images/image-hero-mobile.png"
+        alt="snap homepage banner"
+        class="mobile-banner"
+      />
+      <img
+        src="images/image-hero-desktop.png"
+        alt="snap homepage banner"
+        class="desktop-banner"
+      />
     </section>
 
     <main>
@@ -114,10 +223,18 @@
       </article>
 
       <section class="clients" aria-label="clients that validate the website">
-        <img src="images/client-databiz.svg" alt="logo from databiz" />
-        <img src="images/client-audiophile.svg" alt="logo from audiophile" />
-        <img src="images/client-meet.svg" alt="logo from meet" />
-        <img src="images/client-maker.svg" alt="logo from maker" />
+        <div>
+          <img src="images/client-databiz.svg" alt="logo from databiz" />
+        </div>
+        <div>
+          <img src="images/client-audiophile.svg" alt="logo from audiophile" />
+        </div>
+        <div>
+          <img src="images/client-meet.svg" alt="logo from meet" />
+        </div>
+        <div>
+          <img src="images/client-maker.svg" alt="logo from maker" />
+        </div>
       </section>
     </main>
 
