--- a/Intro section with dropdown navigation/index.html
+++ b/Intro section with dropdown navigation/index.html
@@ -34,7 +34,7 @@
       <!--Nav desktop start-->
       <nav class="nav">
         <section class="option" aria-label="menu">
-          <a href="#" aria-label="features content">
+          <a id="features-content" href="#" aria-label="features content">
             Features
             <img
               src="images/icon-arrow-down.svg"
@@ -73,7 +73,7 @@
               </a>
             </li>
           </ul>
-          <a href="#" aria-label="company content">
+          <a id="companies-content" href="#" aria-label="company content">
             Company
             <img src="images/icon-arrow-down.svg" alt="collapse content" />
             <img
@@ -119,7 +119,7 @@
           <a id="close-menu" href="#" aria-label="icon to expand the menu">
             <img src="images/icon-close-menu.svg" alt="close menu" />
           </a>
-          <a href="#" aria-label="features content">
+          <a id="navmobile-features-content" href="#" aria-label="features content">
             Features
             <img src="images/icon-arrow-down.svg" alt="collapse content" />
             <img
@@ -154,7 +154,7 @@
               </a>
             </li>
           </ul>
-          <a href="#" aria-label="company content">
+          <a id="navmobile-companies-content" href="#" aria-label="company content">
             Company
             <img src="images/icon-arrow-down.svg" alt="collapse content" />
             <img
@@ -252,5 +252,7 @@
         >Joel Cruz</a
       >.
     </footer>
+
+    <script src="main.js"></script>
   </body>
 </html>
