--- a/Interactive card details form main/index.html
+++ b/Interactive card details form main/index.html
@@ -49,7 +49,7 @@
     </header>
 
     <main class="main">
-      <form class="form" action="#" method="post" aria-labelledby="card detail">
+      <form class="form" action="" method="" aria-labelledby="card detail">
         <label for="card-name">Cardholder Name</label>
         <input
           type="text"
@@ -57,7 +57,11 @@
           id="card-name"
           placeholder="e.g. Jane Appleseed"
         />
-        <p class="form--error hidden" aria-label="error message">
+        <p
+          id="error-name"
+          class="form--error hidden"
+          aria-label="error message"
+        >
           Can't be blank
         </p>
         <label for="card-number">Card Number</label>
@@ -67,8 +71,12 @@
           id="card-number"
           placeholder="e.g. 1234 5678 9123 0000"
         />
-        <p class="form--error hidden" aria-label="error message">
-          Can't be blank
+        <p
+          id="error-number"
+          class="form--error hidden"
+          aria-label="error message"
+        >
+          Wrong format, numbers only
         </p>
         <section class="form--section" aria-label="exp input date and cvv">
           <label for="">Exp. Date (MM/YY)</label>
@@ -92,14 +100,22 @@
             class="form--input-cvc"
             placeholder="e.g. 123"
           />
-          <p class="form--error hidden" aria-label="error message">
+          <p
+            id="error-date"
+            class="form--error hidden"
+            aria-label="error message"
+          >
             Can't be blank
           </p>
-          <p class="form--error hidden" aria-label="error message">
+          <p
+            id="error-cvc"
+            class="form--error hidden"
+            aria-label="error message"
+          >
             Can't be blank
           </p>
         </section>
-        <input class="button" type="submit" value="Confirm" />
+        <input id="btn-confirm" class="button" type="submit" value="Confirm" />
       </form>
 
       <!-- Completed state start -->
@@ -129,5 +145,7 @@
         >Joel Cruz</a
       >.
     </footer>
+
+    <script src="js/main.js"></script>
   </body>
 </html>
