--- a/Fylo data storage component master/index.html
+++ b/Fylo data storage component master/index.html
@@ -1,31 +1,80 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0"> <!-- displays site properly based on user's device -->
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <!-- displays site properly based on user's device -->
 
-  <link rel="icon" type="image/png" sizes="32x32" href="./images/favicon-32x32.png">
-  
-  <title>Frontend Mentor | Fylo data storage component</title>
+    <link
+      rel="icon"
+      type="image/png"
+      sizes="32x32"
+      href="./images/favicon-32x32.png"
+    />
 
-  <!-- Feel free to remove these styles or customise in your own stylesheet 👍 -->
-  <style>
-    .attribution { font-size: 11px; text-align: center; }
-    .attribution a { color: hsl(228, 45%, 44%); }
-  </style>
-</head>
-<body>
+    <title>Frontend Mentor | Fylo data storage component</title>
 
-  You’ve used 815 GB of your storage
+    <!-- Feel free to remove these styles or customise in your own stylesheet 👍 -->
+    <style>
+      .attribution {
+        font-size: 11px;
+        text-align: center;
+      }
+      .attribution a {
+        color: hsl(228, 45%, 44%);
+      }
+    </style>
+  </head>
+  <body>
+    <header class="header">
+      <h1>Fylo data storage</h1>
+      <img class="logo" src="images/logo.svg" alt="fylo logo" />
+      <div class="options" aria-label="options">
+        <img
+          class="options__img"
+          src="#images/icon-document.svg"
+          alt="files option"
+        />
+        <img
+          class="options__img"
+          src="#images/icon-folder.svg"
+          alt="storage option"
+        />
+        <img
+          class="options__img"
+          src="#images/icon-upload.svg"
+          alt="upload option"
+        />
+      </div>
+    </header>
 
-  185 GB Left
-  
-  0 GB
-  1000 GB
-  
-  <div class="attribution">
-    Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
-    Coded by <a href="#">Your Name Here</a>.
-  </div>
-</body>
+    <main class="main">
+      <p class="storage-message" aria-label="storage used message">
+        You’ve used <strong>815 GB</strong> of your storage
+      </p>
+      <section class="storage-bar" aria-label="storage used bar">
+        <h2>Storage state info</h2>
+        <p>0 GB</p>
+        <p>1000 GB</p>
+      </section>
+      <div class="storage-indicator" aria-label="available storage idicator">
+        <p>185 GB <span>Left</span></p>
+      </div>
+    </main>
+
+    <footer class="attribution" aria-label="author links">
+      Challenge by
+      <a
+        href="https://www.frontendmentor.io?ref=challenge"
+        target="_blank"
+        aria-label="author Fronted Mentor link"
+        >Frontend Mentor</a
+      >. Coded by
+      <a
+        href="https://github.com/Joel252/Frontend-Mentor-Solutions/tree/master/Fylo%20data%20storage%20component%20master"
+        aria-label="author repository link"
+        >Joel Cruz</a
+      >.
+    </footer>
+  </body>
 </html>
